// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts valid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      For your added security, we require users to add an email address to their accounts.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email Address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <span
          className="SvgIcon-root SvgIcon-sm MessageIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 19.5C11.7929 19.5 11.625 19.3321 11.625 19.125C11.625 18.9179 11.7929 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 19.5C12.2071 19.5 12.375 19.3321 12.375 19.125C12.375 18.9179 12.2071 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 15.75V8.25"
              stroke="currentColor"
              strokeLinecap="round"
              strokeMiterlimit="10"
            />
            <path
              d="M13.621 1.76001C13.4722 1.45702 13.2414 1.20181 12.9549 1.02333C12.6684 0.844851 12.3376 0.750244 12 0.750244C11.6624 0.750244 11.3316 0.844851 11.0451 1.02333C10.7586 1.20181 10.5278 1.45702 10.379 1.76001L0.90601 21.058C0.79198 21.29 0.738946 21.5472 0.751916 21.8053C0.764886 22.0635 0.843432 22.3141 0.980137 22.5334C1.11684 22.7528 1.3072 22.9337 1.53324 23.0591C1.75927 23.1845 2.01353 23.2502 2.27201 23.25H21.728C21.9865 23.2502 22.2407 23.1845 22.4668 23.0591C22.6928 22.9337 22.8832 22.7528 23.0199 22.5334C23.1566 22.3141 23.2351 22.0635 23.2481 21.8053C23.2611 21.5472 23.208 21.29 23.094 21.058L13.621 1.76001Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
        <span>
          This field is required.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add Email Address
    </button>
  </div>
</form>
`;

exports[`checks for invalid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      For your added security, we require users to add an email address to their accounts.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email Address"
          type="text"
          value="invalid-email"
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <span
          className="SvgIcon-root SvgIcon-sm MessageIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 19.5C11.7929 19.5 11.625 19.3321 11.625 19.125C11.625 18.9179 11.7929 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 19.5C12.2071 19.5 12.375 19.3321 12.375 19.125C12.375 18.9179 12.2071 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 15.75V8.25"
              stroke="currentColor"
              strokeLinecap="round"
              strokeMiterlimit="10"
            />
            <path
              d="M13.621 1.76001C13.4722 1.45702 13.2414 1.20181 12.9549 1.02333C12.6684 0.844851 12.3376 0.750244 12 0.750244C11.6624 0.750244 11.3316 0.844851 11.0451 1.02333C10.7586 1.20181 10.5278 1.45702 10.379 1.76001L0.90601 21.058C0.79198 21.29 0.738946 21.5472 0.751916 21.8053C0.764886 22.0635 0.843432 22.3141 0.980137 22.5334C1.11684 22.7528 1.3072 22.9337 1.53324 23.0591C1.75927 23.1845 2.01353 23.2502 2.27201 23.25H21.728C21.9865 23.2502 22.2407 23.1845 22.4668 23.0591C22.6928 22.9337 22.8832 22.7528 23.0199 22.5334C23.1566 22.3141 23.2351 22.0635 23.2481 21.8053C23.2611 21.5472 23.208 21.29 23.094 21.058L13.621 1.76001Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
        <span>
          Please enter a valid email address.
        </span>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Email Address"
          type="text"
          value="invalid-confirmation-email"
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <span
          className="SvgIcon-root SvgIcon-sm MessageIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 19.5C11.7929 19.5 11.625 19.3321 11.625 19.125C11.625 18.9179 11.7929 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 19.5C12.2071 19.5 12.375 19.3321 12.375 19.125C12.375 18.9179 12.2071 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 15.75V8.25"
              stroke="currentColor"
              strokeLinecap="round"
              strokeMiterlimit="10"
            />
            <path
              d="M13.621 1.76001C13.4722 1.45702 13.2414 1.20181 12.9549 1.02333C12.6684 0.844851 12.3376 0.750244 12 0.750244C11.6624 0.750244 11.3316 0.844851 11.0451 1.02333C10.7586 1.20181 10.5278 1.45702 10.379 1.76001L0.90601 21.058C0.79198 21.29 0.738946 21.5472 0.751916 21.8053C0.764886 22.0635 0.843432 22.3141 0.980137 22.5334C1.11684 22.7528 1.3072 22.9337 1.53324 23.0591C1.75927 23.1845 2.01353 23.2502 2.27201 23.25H21.728C21.9865 23.2502 22.2407 23.1845 22.4668 23.0591C22.6928 22.9337 22.8832 22.7528 23.0199 22.5334C23.1566 22.3141 23.2351 22.0635 23.2481 21.8053C23.2611 21.5472 23.208 21.29 23.094 21.058L13.621 1.76001Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
        <span>
          Emails do not match. Try again.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add Email Address
    </button>
  </div>
</form>
`;

exports[`renders addEmailAddress view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="completeAccountBox"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="CompleteAccountBox-container"
        >
          <div
            className="CompleteAccountBox-header"
          >
            <div
              className="CompleteAccountBox-heading3"
            >
              Finish Setting Up Your Account
            </div>
            <div
              className="CompleteAccountBox-title"
            >
              <span>
                Add Email Address
              </span>
            </div>
          </div>
          <div
            className="CompleteAccountBox-main"
          >
            <div
              data-testid="addEmailAddress-container"
            >
              <form
                autoComplete="off"
                onSubmit={[Function]}
              >
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
                >
                  <div>
                    For your added security, we require users to add an email address to their accounts.
                  </div>
                  <div
                    className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                  >
                    <label
                      className="InputLabel-root"
                      htmlFor="email"
                    >
                      Email Address
                    </label>
                    <div
                      className="TextField-root TextField-fullWidth"
                    >
                      <input
                        className="TextField-input TextField-colorRegular"
                        disabled={false}
                        id="email"
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Email Address"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                  >
                    <label
                      className="InputLabel-root"
                      htmlFor="confirmEmail"
                    >
                      Confirm Email Address
                    </label>
                    <div
                      className="TextField-root TextField-fullWidth"
                    >
                      <input
                        className="TextField-input TextField-colorRegular"
                        disabled={false}
                        id="confirmEmail"
                        name="confirmEmail"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Confirm Email Address"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <button
                    className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
                    data-variant="regular"
                    disabled={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="submit"
                  >
                    Add Email Address
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      For your added security, we require users to add an email address to their accounts.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <span
          className="SvgIcon-root SvgIcon-sm MessageIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 19.5C11.7929 19.5 11.625 19.3321 11.625 19.125C11.625 18.9179 11.7929 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 19.5C12.2071 19.5 12.375 19.3321 12.375 19.125C12.375 18.9179 12.2071 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 15.75V8.25"
              stroke="currentColor"
              strokeLinecap="round"
              strokeMiterlimit="10"
            />
            <path
              d="M13.621 1.76001C13.4722 1.45702 13.2414 1.20181 12.9549 1.02333C12.6684 0.844851 12.3376 0.750244 12 0.750244C11.6624 0.750244 11.3316 0.844851 11.0451 1.02333C10.7586 1.20181 10.5278 1.45702 10.379 1.76001L0.90601 21.058C0.79198 21.29 0.738946 21.5472 0.751916 21.8053C0.764886 22.0635 0.843432 22.3141 0.980137 22.5334C1.11684 22.7528 1.3072 22.9337 1.53324 23.0591C1.75927 23.1845 2.01353 23.2502 2.27201 23.25H21.728C21.9865 23.2502 22.2407 23.1845 22.4668 23.0591C22.6928 22.9337 22.8832 22.7528 23.0199 22.5334C23.1566 22.3141 23.2351 22.0635 23.2481 21.8053C23.2611 21.5472 23.208 21.29 23.094 21.058L13.621 1.76001Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
        <span>
          This field is required.
        </span>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorError"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Email Address"
          type="text"
          value=""
        />
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <span
          className="SvgIcon-root SvgIcon-sm MessageIcon-root SvgIcon-strokeWidthRegular SvgIcon-noFill"
        >
          <svg
            viewBox="-0.25 -0.25 24.5 24.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 19.5C11.7929 19.5 11.625 19.3321 11.625 19.125C11.625 18.9179 11.7929 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 19.5C12.2071 19.5 12.375 19.3321 12.375 19.125C12.375 18.9179 12.2071 18.75 12 18.75"
              stroke="currentColor"
            />
            <path
              d="M12 15.75V8.25"
              stroke="currentColor"
              strokeLinecap="round"
              strokeMiterlimit="10"
            />
            <path
              d="M13.621 1.76001C13.4722 1.45702 13.2414 1.20181 12.9549 1.02333C12.6684 0.844851 12.3376 0.750244 12 0.750244C11.6624 0.750244 11.3316 0.844851 11.0451 1.02333C10.7586 1.20181 10.5278 1.45702 10.379 1.76001L0.90601 21.058C0.79198 21.29 0.738946 21.5472 0.751916 21.8053C0.764886 22.0635 0.843432 22.3141 0.980137 22.5334C1.11684 22.7528 1.3072 22.9337 1.53324 23.0591C1.75927 23.1845 2.01353 23.2502 2.27201 23.25H21.728C21.9865 23.2502 22.2407 23.1845 22.4668 23.0591C22.6928 22.9337 22.8832 22.7528 23.0199 22.5334C23.1566 22.3141 23.2351 22.0635 23.2481 21.8053C23.2611 21.5472 23.208 21.29 23.094 21.058L13.621 1.76001Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </span>
        <span>
          This field is required.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add Email Address
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      For your added security, we require users to add an email address to their accounts.
    </div>
    <div
      className="CallOut-root CallOut-colorError CallOut-fullWidth"
    >
      <div
        className="CallOut-inner"
      >
        server error

GraphQL request:4:3
3 | ) {
4 |   setEmail(input: $input) {
  |   ^
5 |     user {
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email Address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Email Address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add Email Address
    </button>
  </div>
</form>
`;

exports[`successfully sets email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      For your added security, we require users to add an email address to their accounts.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="email"
      >
        Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Email Address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="confirmEmail"
      >
        Confirm Email Address
      </label>
      <div
        className="TextField-root TextField-fullWidth"
      >
        <input
          className="TextField-input TextField-colorRegular"
          disabled={false}
          id="confirmEmail"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Confirm Email Address"
          type="text"
          value="hans@test.com"
        />
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Add Email Address
    </button>
  </div>
</form>
`;
